This fixes the alignment for everything on the page and it enlarges the buttons because they were almost impossible to press before.

--- a/static/live-mobile.css
+++ b/static/live-mobile.css
@@ -1,6 +1,6 @@
-
 body {
     font-size: 10pt;
+    margin-left: 8px;
 }
 .sympy-live-output {
     font-family: monospace;
@@ -14,6 +14,7 @@ body {
     height: 300px;
     min-width: 200px;
     width: 100%;
+    margin-left: 0;
 }
 
 .sympy-live-output > div {
@@ -38,7 +39,7 @@ body {
     background-color: #f5f5f5;
     resize: none;
     width: 50px;
-    margin-left: 3px;
+    margin-left: 0px;
 }
 
 .sympy-live-prompt {
@@ -66,22 +67,26 @@ body {
 }
 
 .sympy-live-toolbar > * {
-    margin-left: 0.5em;
+    margin-left: 0;
 }
 .sympy-live-toolbar > button {
-    margin-left: 0.5em;
+    margin-left: 0;
+    border-color: #f5f5f5;
+    border-size: 10px;
     background-color: #3b5526;
     color: #FFF;
+    width: 100px;
+    height: 50px;
 }
 
 
 
 #sympy-live-toolbar-history {
     display: inline-block;
-    width: 30px;
+    width: 40px;
     height: 76px;
     position: absolute;
-    right: 10px;
+    right: 5px;
 
 }
 
@@ -89,7 +94,7 @@ body {
     margin-left: 0.5em;
     display: inline;
     width: 100%;
-    height: 49.9%;
+    height: 48%;
     background-color: #3b5526;
     color: #FFF;
 }
@@ -121,6 +126,7 @@ body {
     text-align: center;
     background-color: #3b5526;
     height: 50px;
+    margin-left: -8px;
 }
 #header h1 {
     font-size: 120%;
@@ -168,12 +174,15 @@ body {
     font-weight: bold;
     float: right;
     display: inline-block;
-    margin: 10px 0 5px 0;
+    margin: 2px 0 110px 0;
+    width: 50px;
+    height: 45px;
 }
+
+
 #user {
     border: none;
-    padding: 5px;
-    margin: 2px;
+    padding: 6px;
     height: 20px;
 }
 #user a:link, #user a:visited, #user a:hover, #user a:active { color: #3b5526; }
